CNN_lenet5/solution1/csim/report/Lenet_HW_csim.log
INFO: [SIM 2] *************** CSIM start ***************
INFO: [SIM 4] CSIM will launch GCC as the compiler.
   Compiling ../../../../lenet_hw_tb.cpp in debug mode
csim.mk:79: recipe for target 'obj/lenet_hw_tb.o' failed
../../../../lenet_hw_tb.cpp: In function 'int main()':
../../../../lenet_hw_tb.cpp:52:106: error: invalid initialization of non-const reference of type 'hls::stream<float>&' from an rvalue of type 'float* (*)[100]'
     Lenet_HW(Layer1_Neurons_stream, Layer1_Weights_stream, Layer2_Weights_stream, Layer3_Weights_stream, &Layer4_Neurons_Csim);
                                                                                                          ^~~~~~~~~~~~~~~~~~~~
In file included from ../../../../lenet_hw_tb.cpp:4:0:
../../../../lenet5.h:11:6: note: in passing argument 5 of 'void Lenet_HW(hls::stream<float>&, hls::stream<float>&, hls::stream<float>&, hls::stream<float>&, hls::stream<float>&)'
 void Lenet_HW(hls::stream<float>& Layer1_Neurons_stream,
      ^~~~~~~~
../../../../lenet_hw_tb.cpp:60:47: error: cannot convert 'float*' to 'float' in initialization
         float expected = Layer4_Neurons_Csim[i];
                                               ^
make: *** [obj/lenet_hw_tb.o] Error 1
ERR: [SIM 100] 'csim_design' failed: compilation error(s).
INFO: [SIM 3] *************** CSIM finish ***************
